# PaperReader

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  documents.py  settings.py
backend/app/core/: config.py  paths.py
backend/app/db/: __init__.py  engine.py  fts.py  models.py  repositories.py
backend/app/schemas/: __init__.py  documents.py  settings.py
backend/app/services/: __init__.py  chat_engine.py  chunker.py  fetcher.py  figure_extractor.py  html_parser.py  job_manager.py  model_client.py  note_generator.py  pdf_parser.py  source_detector.py
backend/tests/: conftest.py  test_api_documents.py  test_chat_engine.py  test_chunker_fts.py  test_engine.py  test_fetcher.py  test_figure_extractor.py  test_html_parser.py  test_job_manager.py  test_model_client.py  test_note_generator.py  test_paths.py  test_pdf_parser.py  test_settings.py  test_source_detector.py
docs/superpowers/plans/: 2026-07-02-paper-reader-implementation.md
docs/superpowers/specs/: 2026-07-02-paper-reader-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  DocumentList.tsx  ImportBox.tsx  NoteViewer.test.tsx  NoteViewer.tsx  SettingsDialog.tsx
